Migrated from Java 8 / Ant to OpenJDK 13 / Maven